{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 7,
  "lineage": "b370fd57-98e5-6a79-cef1-9ca4be98a75e",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-17T13:43:41.683-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/midyear-lattice-454019-u0/global/firewalls/default-allow-http",
            "log_config": [],
            "name": "default-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/networks/custom-vpc",
            "priority": 1000,
            "project": "midyear-lattice-454019-u0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/firewalls/default-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-03-17T13:43:41.708-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/midyear-lattice-454019-u0/global/firewalls/default-allow-internal",
            "log_config": [],
            "name": "default-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/networks/custom-vpc",
            "priority": 1000,
            "project": "midyear-lattice-454019-u0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/firewalls/default-allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-17T13:43:41.691-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/midyear-lattice-454019-u0/global/firewalls/default-allow-ssh",
            "log_config": [],
            "name": "default-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/networks/custom-vpc",
            "priority": 2000,
            "project": "midyear-lattice-454019-u0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/firewalls/default-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2025-03-17T13:43:41.637-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/midyear-lattice-454019-u0/global/firewalls/deny-all",
            "log_config": [],
            "name": "deny-all",
            "network": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/networks/custom-vpc",
            "priority": 65534,
            "project": "midyear-lattice-454019-u0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/firewalls/deny-all",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/midyear-lattice-454019-u0/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6273661236344600477",
            "project": "midyear-lattice-454019-u0",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/networks/custom-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-17T13:43:44.513-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/midyear-lattice-454019-u0/regions/europe-west1/subnetworks/subnetwork",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/global/networks/custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "midyear-lattice-454019-u0",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-lattice-454019-u0/regions/europe-west1/subnetworks/subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.this"
          ]
        }
      ]
    }
  ]
}